Added viewport meta, changed font size, fixed issue with content borders

--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
 
   </head>
 
-  <body>
+  <body style="margin:0;padding:0">
  <!--    <div>
     <ul class="_fbw-post-list">
     <li class="_fbw-post">
