--- a/html/facebookwall.html
+++ b/html/facebookwall.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <style>
       $FACEBOOKWALL_STYLE
     </style>
@@ -25,6 +26,6 @@
       });
     </script>
   </head>
-  <body>
+  <body style="margin:0;padding:0">
   </body>
 </html>
