--- a/test.html
+++ b/test.html
@@ -20,8 +20,10 @@
     <script type="text/javascript" src="src/feed_view.js"></script>
     <script type="text/javascript" src="src/post_view.js"></script>
     <script type="text/javascript" src="src/comment_view.js"></script>
+    <script type="text/javascript" src="src/spinner.js"></script>
 
     <link rel="stylesheet" href="css/base.css" type="text/css" />
+    <link rel="stylesheet" href="css/spinner.css" type="text/css" />
 
 
     <script type="text/javascript">
