--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
           can_post: urlParam('can_post'),
           session: {
             accessToken: urlParam('access_token'),
-            userID: urlParam('user_id')
+            userID: urlParam('user')
           }
         });
         feedView = new FacebookWall.FeedView({feed: feed});
